[package]
name = "super-quinn"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
quinn = "0.11.8"
tokio = { version = "1.47.1", features = [
    "macros",
    "rt-multi-thread",
    "io-std",
] }
tracing = "0.1.41"
toml = "0.9.5"
thiserror = "2.0.16"
rustls-pemfile = "2.2.0"
anyhow = "1.0.99"
